Upgrade to Java 21: update compiler target, fix deprecated URL constructors, upgrade WireMock 3.12.1, Logback 1.5.18, Mockito 5.16.1
Step 1: Update maven.compiler.source/target from 1.8 to 21
Step 2: Replace deprecated new URL(string) with URI.create(string).toURL() in JdkClient, APIManager, and JdkClientTest
Step 3: Upgrade WireMock from wiremock-jre8 2.35.2 to wiremock 3.12.1
Step 4: Upgrade Logback from 1.3.12 to 1.5.18, remove obsolete JDK8 comment
Step 5: Upgrade Mockito core and junit-jupiter from 4.x to 5.16.1
Also: Remove outdated Java 8 comments from pom.xml and DefaultFusionTokenProvider

Co-Authored-By: tfarough@gmail.com <tfarough@gmail.com>